--- a/app/assets/stylesheets/Analytics.scss
+++ b/app/assets/stylesheets/Analytics.scss
@@ -13,25 +13,16 @@
   }
 }
 .chart-body-sass{
-  .compare-current-btn{
-    float:right;
-    padding:5px 0px;
-    width:120px;
-    font-size:12px;
-    z-index:999;
-    position:relative;
-    top:3px;
-    right:-6px;
-  }
+
 }
 
 .detail-block{
   position:absolute;
   top:71px;
-  right:auto;
+  right:"auto";
   bottom:0px;
   left:-999em;
-  z-index:999;
+  z-index:500;
   background:#fff;
   $min-width:1024px;
   $min-height:700px;
@@ -136,6 +127,11 @@
           font-size:14px;
           padding:5px 0 0 5px;
           font-weight:600;
+          span{
+            color:#9d9d9d;
+            font-size:11px;
+            font-weight:100;
+          }
         }
         .accordion-header{
           border-top:1px solid rgba(0,0,0,0.2);
@@ -147,13 +143,13 @@
             background:rgba(0,0,0,0.2);
           }
           i{
-            margin-right:3px;
+            margin-right:19px;
 
           }
-          &:after{
+          &:before{
             content:"::";
             position:absolute;
-            right:8px;
+            left:21px;
             top:2px;
             font-size:14px;
             cursor: move;
@@ -164,17 +160,17 @@
           ul{
             padding:0 5px 0 25px;
             li{
-              padding:3px 0;
+              padding:3px 0 0 19px;
               border-bottom:1px solid rgba(0,0,0,0.2);
               position:relative;
               cursor:move;
               &:last-of-type{
                 border-bottom:none;
               }
-              &:after{
+              &:before{
                 content:"::";
                 position:absolute;
-                right:3px;
+                left:3px;
                 top:1px;
                 font-size:14px;
               }
@@ -257,25 +253,27 @@
 
       .left{
         $width:350px;
-        float:left;
-        width:$width;
+        width:100%;
+        height:$width+50 ;
         padding-left:45px;
         position:relative;
          .graph{
            width:$width;
-           height:$width;
+           height:$width ;
            margin-left:-20px;
+           float:left;
          }
+
          .big{
-          position:absolute;
-          left:0px;
-          right:0px;
-          top:$width - 30;
-          z-index:999;
+          width:260px;
+          height:$width+50 ;
+          float:left;
           p{
             text-align:center;
+            color:#e2bf35;
+            font-weight:bolder;
             &:first-of-type{
-
+              margin-top:$width/2 - 50;
               font-size:15px;
               margin-bottom:2px;
               @include word-break;
@@ -286,18 +284,22 @@
               font-size:60px;
               font-family:"helve";
               font-weight:300;
+              margin-top:-5px;
             }
           }
          }
+
          .small{
+           float:left;
           &:after{
             @include clearFloat;
           }
-          border-top:1px solid #ddd;
-          width:100%;
+          border-left:1px solid #ddd;
+          width:300px;
           text-align:left;
-          margin-top:65px;
+          margin-top:95px;
           padding-top:10px;
+           padding-left:25px;
               dl{
                 float:left;
                 width:50%;
@@ -305,23 +307,29 @@
                 dt{
                   font-size:11px;
                   color:#9d9d9d;
-                  margin-top:8px;
+                  margin-top:5px;
                 }
                 dd{
                   width:100%;
                   @include text-overflow;
+                  .icon-arrow-up{
+                       color:$green;
+                  }
+                  .icon-arrow-down{
+                       color:$red;
+                  }
                 }
               }
           }
       }
 
       .right{
-        float:left;
+
             &>table{
               min-width:300px;
               width:100%;
-              margin-top:30px;
-              margin-left:25px;
+              margin-top:10px;
+              margin-left:45px;
               border-collapse:collapse;
               margin-bottom:10px;
               $tr-padding:4px 3px;
@@ -335,6 +343,7 @@
                   }
                 }
                 td{
+                  font-weight:bold;
                   padding:$tr-padding;
                 }
               }
@@ -348,10 +357,21 @@
                 }
                 td{
                   padding:$tr-padding;
-                  width:14%;
+                  color:#555;
                   @include word-break;
                   &:first-of-type{
-                    width:30%;
+
+                  }
+                  .icon-arrow-down{
+                    color:$red;
+                  }
+                  .icon-arrow-up{
+                    color:$green;
+                  }
+                  .table-detail-compare{
+                    width:70px;
+                    padding:3px;
+                    font-size:11px;
                   }
                 }
               }
@@ -362,5 +382,92 @@
     }
 
   }
+}
 
+
+.detail-table-compare-block{
+  background:rgba(0,0,0,0.7);
+  position:absolute;
+  z-index:600;
+  left:-999em;
+  right:auto;
+  bottom:0px;
+  top:71px;
+  $min-width:1024px;
+  $min-height:730px;
+  min-width:$min-width;
+  min-height:$min-height;
+  .inner{
+    position:absolute;
+    top:0px;
+    left:-1000px;
+    bottom:0px;
+    min-height:$min-height;
+    $inner-width:1000px;
+    width:$inner-width;
+    background:#fff;
+    transition:left 0.45s ease-out;
+    .header{
+      padding:10px 0px 15px;
+      margin:0 20px;
+      border-bottom:1px solid #9d9d9d;
+      position:relative;
+      p{
+        padding-left:5px;
+        margin:0px;
+        &:first-of-type{
+          font-size:38px;
+          margin-top:12px;
+          font-family:"helve";
+        }
+        &:nth-of-type(2){
+          font-size:19px;
+        }
+        &:nth-of-type(3){
+          font-size:12px;
+          color:#9d9d9d;
+        }
+        width:80%;
+      }
+      .icon-remove{
+        float:right;
+        font-size:23px;
+        position:absolute;
+        top:10px;
+        right:5px;
+        color:#9d9d9d;
+        cursor:pointer;
+        pointer-events:auto;
+        @include transition(color);
+        &:hover{
+          color:$red-hover
+        }
+      }
+    }
+    .graph{
+      width:90%;
+      margin:20px auto 25px;
+      height:450px;
+    }
+    .footer{
+      $footer-width : $inner-width - 200;
+      width:$footer-width;
+      margin:0 auto 0;
+      &:after{
+        @include clearFloat;
+      }
+      dl{
+        float:left;
+        width:$footer-width/4;
+        dt{
+          font-size:13px;
+          color:#9d9d9d;
+        }
+        dd{
+          font-size:22px;
+          padding-left:19px;
+        }
+      }
+    }
+  }
 }
