--- a/app/assets/stylesheets/Entry.css
+++ b/app/assets/stylesheets/Entry.css
@@ -112,6 +112,7 @@
 .entry-sort-list{
     position:relative;
     top:37px;
+    left:8px;
 }
 .entry-sort-list li{
     display:inline-block;
@@ -124,7 +125,7 @@
     margin-bottom:15px;
     position:relative;
 }
-.entry-sort-list li>div>table{
+.entry-sort-list li>.table-outer-div>table{
     position:absolute;
     left:19px;
     top:14px;
@@ -132,50 +133,50 @@
     width:inherit;
     transition:width 0.45s ease-out 0.1s;
 }
-.entry-sort-list li>div>table{
+.entry-sort-list li>.table-outer-div>table{
     table-layout:fixed
 }
-.entry-sort-list li>div>table tr td{
+.entry-sort-list li>.table-outer-div>table tr td{
     overflow:hidden;
     text-overflow:ellipsis;
     white-space:nowrap;
     cursor:default;
 }
-.entry-sort-list li>div>table tr:first-of-type{
+.entry-sort-list li>.table-outer-div>table tr:first-of-type{
     font-size:21px;
     color:rgba(0,0,0,0.5);
 }
-.entry-sort-list li>div>table tr:nth-of-type(2){
+.entry-sort-list li>.table-outer-div>table tr:nth-of-type(2){
     color:rgba(0,0,0,0.3);
     font-size:13px;
 }
 /*first column*/
-.entry-sort-list li>div>table tr:first-of-type td:first-of-type{
+.entry-sort-list li>.table-outer-div>table tr:first-of-type td:first-of-type{
     color:#5FA9DA;
     width:25%;
     padding-right:10px;
 }
 /*second column*/
-.entry-sort-list li>div>table tr:first-of-type td:nth-of-type(2){
+.entry-sort-list li>.table-outer-div>table tr:first-of-type td:nth-of-type(2){
     width:140px
 }
 /*third column*/
-.entry-sort-list li>div>table tr:first-of-type td:nth-of-type(3){
+.entry-sort-list li>.table-outer-div>table tr:first-of-type td:nth-of-type(3){
     width:100px
 }
 /*forth column*/
-.entry-sort-list li>div>table tr:first-of-type td:nth-of-type(4){
+.entry-sort-list li>.table-outer-div>table tr:first-of-type td:nth-of-type(4){
     /*color:#5FA9DA;*/
     padding-right:15px;
     width:12%;
 }
 /*fifth column*/
-.entry-sort-list li>div>table tr:first-of-type td:nth-of-type(5){
+.entry-sort-list li>.table-outer-div>table tr:first-of-type td:nth-of-type(5){
     /*color:#55c8b4;*/
     width:12%;
 }
 
-.entry-sort-list li>div>table tr:first-of-type td:nth-of-type(6) input{
+.entry-sort-list li>.table-outer-div>table tr:first-of-type td:nth-of-type(6) input{
     position:absolute;
     left:auto;
     top:-2px;
@@ -184,10 +185,10 @@
     height:20px;
     border:1px solid #5FA9DA !important;
 }
-.entry-sort-list li>div>table tr:first-of-type td:nth-of-type(6){
+.entry-sort-list li>.table-outer-div>table tr:first-of-type td:nth-of-type(6){
     width:15%;
 }
-.entry-sort-list li>div>table tr:first-of-type td:nth-of-type(7){
+.entry-sort-list li>.table-outer-div>table tr:first-of-type td:nth-of-type(7){
     width:8%;
 }
 .kpi-entry-trend{
