--- a/app/views/kpi_entries/_entry.html.erb
+++ b/app/views/kpi_entries/_entry.html.erb
@@ -2,7 +2,7 @@
   value =KpiUnit.parse_entry_value(kpi.unit, entry.value) if (entry=KpiEntriesHelper.get_kpi_entry_for_entry(kpi.user_kpi_item_id, @parsed_entry_at))
 %>
     <li id="<%= kpi.user_kpi_item_id %>">
-      <div style="height: 100%;overflow: hidden;">
+      <div class="table-outer-div" style="height: 100%;overflow: hidden;">
         <table>
           <tr>
             <td title="<%= kpi.name %>"><%= kpi.name %></td>
@@ -22,7 +22,7 @@
             </td>
 
             <td class="kpi-entry-trend"></td>
-            <td class=""><a class="btn btn-success show-entry-detail" id="<%= kpi.user_kpi_item_id %>">Detail</a></td>
+            <td class=""><a class="btn btn-primary show-entry-detail" id="<%= kpi.user_kpi_item_id %>">Detail</a></td>
           </tr>
           <tr>
             <td><%= kpi.description %></td>
@@ -32,19 +32,31 @@
             <td><%= t 'manage.kpi.target_min' %></td>
             <td><%= t 'entry.desc.actual' %></td>
             <td><%= t 'entry.desc.recent' %></td>
-            <td><%= "Details" %></td>
+            <td></td>
           </tr>
         </table>
       </div>
       <div class="box">
-        <div class="text">
-          1
-          <br />
-          2
-          <br />
-          3
-          <br />
-        </div>
+        <table>
+          <thead>
+            <tr>
+              <td>时间</td>
+              <td>性别</td>
+              <td>天气</td>
+              <td>输入值</td>
+              <td></td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>2014-04-15</td>
+              <td>男</td>
+              <td>阴</td>
+              <td>145</td>
+              <td><i class="icon icon-remove"></i></td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </li>
 <% end %>
