--- a/app/views/kpis/_list.html.erb
+++ b/app/views/kpis/_list.html.erb
@@ -38,7 +38,7 @@
                </tr>
           </table>
        <div class="attribute-position">
-         <a class="btn btn-success edit-kpi-attribute" work_at="<%= kpi.id%>">编辑属性</a>
+         <a class="btn btn-success edit-kpi-attribute" work_at="<%= kpi.id%>"><%= t 'manage.kpi.dimensions-edit'%></a>
          <p kpi_id="<%= kpi.id%>">
            <% kpi.kpi_property_items.each do |item| %>
                <span id="<%= item.id %>"><%= item.kpi_property.name %></span>
