--- a/app/views/kpi_entries/_entry.html.erb
+++ b/app/views/kpi_entries/_entry.html.erb
@@ -36,7 +36,7 @@
           </tr>
         </table>
       </div>
-      <div class="box">
+      <div class="box" style="display:none">
        <!-- <table>
           <thead>
             <tr>
