--- a/app/assets/stylesheets/Analytics.scss
+++ b/app/assets/stylesheets/Analytics.scss
@@ -325,7 +325,7 @@
 
       .right{
             height:248px;
-
+            overflow-x:hidden;
             overflow-y:auto;
             &>table{
               min-width:300px;
