--- a/app/views/entities/index.html.erb
+++ b/app/views/entities/index.html.erb
@@ -66,8 +66,8 @@
       </div>
     </section>
     <section class="solid">
-      <h3>什么是输入点？</h3>
-      <p>输入点是组织内部管理kpi数据的最小单位</p>
+      <h3><%= t 'manage.department.desc.what-is-entity-title'%></h3>
+      <p><%= t 'manage.department.desc.what-is-entity'%></p>
 
     </section>
 
