--- a/app/views/kpis/index.html.erb
+++ b/app/views/kpis/index.html.erb
@@ -52,11 +52,9 @@
          <!--<a class="btn btn-success" id="kpi-manage-attribute">管理属性</a>-->
        <!--</section>-->
           <section class="solid">
-               <h3>什么是KPI？</h3>
+               <h3><%= t 'manage.kpi.desc.what-is-kpi-title'%></h3>
                <p>
-                 KPI是企业关键绩效指标(KPI：Key Performance Indicator)是通过对组织内部流程的输入端、输出端的关键参数进行设
-                 置、取样、计算、分析，衡量流程绩效的一种目标式量化管理指标，是把企业的战略目标分解为可操作的工作目标的工具，是企
-                 业绩效管理的基础。
+                 <%= t 'manage.kpi.desc.what-is-kpi'%>
                </p>
 
           </section>
@@ -159,8 +157,8 @@
 
 
     <div class="btn-group">
-      <a class="btn btn-small"  id="cancel-new-kpi-block">取消</a>
-      <a class="btn btn-primary btn-small" id="manage-kpi-add-new">创建</a>
+      <a class="btn btn-small"  id="cancel-new-kpi-block"><%t 'manage.kpi.ok' %></a>
+      <a class="btn btn-primary btn-small" id="manage-kpi-add-new"><%t 'manage.kpi.cancle' %></a>
     </div>
 
   </div>
