--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -104,15 +104,15 @@
       <a class="btn btn-primary" id="manage-user-delivery"><%= t 'manage.user.desc.assign_now' %></a>
     </section>
     <section class="solid">
-      <h3>管理者权限</h3>
+      <h3><%= t 'manage.user.desc.what-is-manager-title'%></h3>
 
-      <p>观察输入点上kpi实际数据</p>
+      <p><%= t 'manage.user.desc.what-is-manDager'%></p>
 
     </section>
     <section class="solid">
-      <h3>普通用户的功能</h3>
+      <h3><%= t 'manage.user.desc.what-is-user-title'%></h3>
 
-      <p>输入管理员为其分配kpi的实际数据</p>
+      <p><%= t 'manage.user.desc.what-is-user'%></p>
 
     </section>
   </aside>
