--- a/app/views/kpis/index.html.erb
+++ b/app/views/kpis/index.html.erb
@@ -157,8 +157,8 @@
 
 
     <div class="btn-group">
-      <a class="btn btn-small"  id="cancel-new-kpi-block"><%= t 'manage.base.add_btn' %></a>
-      <a class="btn btn-primary btn-small" id="manage-kpi-add-new"><%= t 'manage.base.cancel_btn' %></a>
+      <a class="btn btn-small"  id="cancel-new-kpi-block"><%= t 'manage.base.cancel_btn' %></a>
+      <a class="btn btn-primary btn-small" id="manage-kpi-add-new"><%= t 'manage.base.add_btn' %></a>
     </div>
 
   </div>
