--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -106,7 +106,7 @@
     <section class="solid">
       <h3><%= t 'manage.user.desc.what-is-manager-title'%></h3>
 
-      <p><%= t 'manage.user.desc.what-is-manDager'%></p>
+      <p><%= t 'manage.user.desc.what-is-manager'%></p>
 
     </section>
     <section class="solid">
