--- a/app/views/kpi_categories/_left_menu.html.erb
+++ b/app/views/kpi_categories/_left_menu.html.erb
@@ -3,7 +3,7 @@
        <%= t 'manage.kpi.category'%>
      </li>
      <li id="manage-menu-add">
-          <input type="text" />
+          <input type="text" placeholder="<%= t 'manage.kpi.category'%>"/>
           <span><i class="icon-plus"></i>  <%= t 'manage.kpi.category'%></span>
           <p class="manage-add-tooltip">
             <%= t 'manage.base.enter_confirm '%>
