--- a/app/views/kpi_entries/_entry.html.erb
+++ b/app/views/kpi_entries/_entry.html.erb
@@ -62,7 +62,10 @@
 <% end %>
 
 <script>
-    MANAGE.entry.init();
+  $(document).ready(function(){
+      MANAGE.entry.init();
+  })
+
 </script>
 
 <style>
