--- a/app/views/kpis/_new.html.erb
+++ b/app/views/kpis/_new.html.erb
@@ -3,7 +3,7 @@
      <i class="icon-remove" id="close-add-kpi"></i>
      <div>
           <div class="select-div">
-               <select data-placeholder="* Category" class="chosen-select"  id="new-kpi-category"></select>
+               <select data-placeholder="* <%= t 'manage.kpi.category'%>" class="chosen-select"  id="new-kpi-category"></select>
           </div>
           <input type="text" placeholder="* <%= t 'manage.kpi.name'%>" id="new-kpi-name"/>
           <textarea placeholder="   <%= t 'manage.kpi.description'%>" id="new-kpi-desc"></textarea>
