--- a/app/views/shares/_locale.html.erb
+++ b/app/views/shares/_locale.html.erb
@@ -4,7 +4,7 @@
   <ul class="menu-select-language" id="menu-select-language">
     <li lan="zh">中文</li>
     <li lan="en">English</li>
-    <li lan="de">Deutsch</li>
+    <!--<li lan="de">Deutsch</li>-->
   </ul>
 </li>
 
