--- a/app/views/kpis/index.html.erb
+++ b/app/views/kpis/index.html.erb
@@ -103,7 +103,7 @@
   <div >
     <i class="icon icon-remove" id="remove-new-kpi-block"></i>
     <div class="select-div">
-      <select style="width:242px;" data-placeholder="* Category" class="chosen-select"  id="new-kpi-category" >
+      <select style="width:242px;" data-placeholder="* <%= t 'manage.kpi.category'%>" class="chosen-select"  id="new-kpi-category" >
 
       </select>
     </div>
