--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -78,10 +78,10 @@
             <section class="solid dashboard-add-type">
                   <h3><%= t 'dashboard_group.dashboard.choose_type' %></h3>
                   <ul id="db-add-type">
-                        <li class="active" type="line"></li>
-                        <li type="column"></li>
-                        <li type="pie"></li>
-                        <li type="scatter"></li>
+                    <li type="line"></li>
+                    <li class="active"type="column"></li>
+                    <li type="pie"></li>
+                    <li type="scatter"></li>
                   </ul>
             </section>
             <section class="solid">
