--- a/app/assets/stylesheets/treeview.css
+++ b/app/assets/stylesheets/treeview.css
@@ -97,15 +97,15 @@ right connector from last child*/
 
 .tree li p{
     border: 1px solid #ccc;
-    width: 50px;
-    height: 50px;
+    width: 80px;
+    #height: 80px;
     text-align: center;
     color: white;
     font-family: arial, verdana, tahoma;
     font-size: 11px;
     display: inline-block;
     padding-top:15px;
-    height:35px;
+    height:60px;
     background-color:#3D6AA2;
 
     -moz-border-radius: 50%;
