--- a/app/assets/stylesheets/Manage-kpi.css
+++ b/app/assets/stylesheets/Manage-kpi.css
@@ -418,16 +418,26 @@
 .manage-kpi-navi>section:first-of-type{
     position:relative;
 }
-.manage-kpi-navi>section:first-of-type:after{
-    content:"------------------ OR ------------------";
-    position:absolute;
+.manage-kpi-navi .or-sign{
+    position:relative;
+    top:0px;
     left:0px;
-    bottom:-10px;
     right:0px;
+    color:#9d9d9d;
+    display:block;
     text-align:center;
     font-size:15px;
-    color:#9d9d9d;
 }
+/*.manage-kpi-navi>section:first-of-type:after{*/
+    /*content:"------------------ OR ------------------";*/
+    /*position:absolute;*/
+    /*left:0px;*/
+    /*bottom:-10px;*/
+    /*right:0px;*/
+    /*text-align:center;*/
+    /*font-size:15px;*/
+    /*color:#9d9d9d;*/
+/*}*/
 .manage-kpi-navi>section:nth-of-type(2){
     border-top:none;
 }
