fix kpi manage trans

--- a/app/views/kpis/index.html.erb
+++ b/app/views/kpis/index.html.erb
@@ -37,7 +37,7 @@
                </p>
                <a class="btn btn-primary" id="kpi-add-show"><%= t 'manage.kpi.desc.create_now'%></a>
           </section>
-          <label class="or-sign">------------------ OR ------------------</label>
+          <label class="or-sign">------------------ <%= t 'manage.kpi.desc.or'%> ------------------</label>
           <section class="solid">
                <h3><%= t 'manage.kpi.kpi_library'%></h3>
                <p>
