--- a/app/views/kpi_entries/analyse.html.erb
+++ b/app/views/kpi_entries/analyse.html.erb
@@ -92,6 +92,11 @@
 
     <div class="relative" id="chart-main-middle">
       <div class="chart-container " id="chart-container"></div>
+      <div class="chart-container-item" id="chart-container-item">
+        <ul class="items">
+
+        </ul>
+      </div>
     </div>
 
     <table class="chart-type-alternate" id="chart-type-alternate" my_height="70">
