--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -28,6 +28,7 @@
       <dl>
         <dt><%= t 'manage.departments.desc.basic-name'%>:</dt>
         <dd class='name' post='name'>Leoni-shanghai</dd>
+        <i class="icon icon-edit"></i>
       </dl>
       <a class="btn btn-danger"><%= t 'manage.departments.desc.delete-department'%></a>
     </div>
