--- a/app/assets/stylesheets/Manage-part.scss
+++ b/app/assets/stylesheets/Manage-part.scss
@@ -53,7 +53,7 @@ $pColor-3:#9d9d9d;
       &>dl{
         margin-top:-5px;
         padding-left:$section-paddingH;
-
+        position:relative;
         cursor:default;
         &:after{
           content:"";
@@ -74,6 +74,17 @@ $pColor-3:#9d9d9d;
             width:160px;
             padding:3px 3px;
             font-size:12px;
+          }
+        }
+        i{
+          position:absolute;
+          right:1px;
+          top:0px;
+          pointer-events:auto;
+          color:#777;
+          cursor:pointer;
+          &:hover{
+            color:$blue-hover;
           }
         }
       }
