--- a/app/assets/stylesheets/Analytics.scss
+++ b/app/assets/stylesheets/Analytics.scss
@@ -3,7 +3,10 @@
 .analytics-mark{
   h2{
     @include word-break;
-    font-size:30px;
+    font-size:24px;
+    margin-top:8px;
+    font-family:"Arial";
+    font-weight:100;
   }
 }
 
