--- a/app/views/kpi_categories/_left_readonly_menu.html.erb
+++ b/app/views/kpi_categories/_left_readonly_menu.html.erb
@@ -4,7 +4,7 @@
   </li>
   <% @categories.each do |category| %>
       <li class="<%= category.id==@active_category_id ? 'active' : '' %>" number="<%= category.id %>" title="<%= category.name %>">
-        <a category="<%= category.id %>" href="/kpis/access/<%= category.id %>"><%= category.name %></a>
+        <a category="<%= category.id %>"><%= category.name %></a>
       </li>
   <% end %>
 </ul>
