--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,34 +15,9 @@
             <a class="btn" id="manage-item-remove"><%= t 'manage.base.delete_btn' %></a>
             <a class="btn" id="manage-user-edit"><%= t 'manage.base.edit_btn' %></a>
           </div>
-          <ul id="manage-sort-list" class="manage-sort-list">
-            <% @users.each_with_index do |user, i| %>
-                <li id="<%= user.id %>" is_tenant="<%= user.is_tenant %>">
-                  <p class="sort-handle">:</p>
-                  <input type="checkbox"/>
-                  <table class="group">
-                    <tr>
-                      <td class="user-manage-name"><%= user.first_name %></td>
-                      <td class="user-manage-title"><%= user.title %></td>
-                      <td class="user-manage-tel" title="<%= user.tel %>"><%= user.tel %></td>
-                      <td class="user-manage-phone" title="<%= user.phone %>"><%= user.phone %></td>
-                      <td class="user-manage-entity" title="<%= user.entity_name %>" value="<%= user.entity_id %>"><%= user.entity_name %></td>
-                      <td title="<%= user.department_names %>"><%= user.department_names %></td>
-                      <td class="user-manage-authority" value="<%= user.role_id %>"><%= UsersHelper.get_user_role_display(user.role_id) %></td>
-                    </tr>
-                    <tr>
-                      <td class="user-manage-mail"><%= user.email %></td>
-                      <td><%= t 'manage.user.new.title' %></td>
-                      <td><%= t 'manage.user.new.tel' %></td>
-                      <td><%= t 'manage.user.new.phone' %></td>
-                      <td><%= t 'manage.user.new.entity' %></td>
-                      <td><%= t 'manage.user.new.departments' %></td>
-                      <td><%= t 'manage.user.new.authority' %></td>
-                    </tr>
-                  </table>
-                </li>
-            <% end %>
-          </ul>
+          <div id="user-item-container">
+            <%= render partial: 'list' %>
+          </div>
         </div>
         <div class="manage-user-add" id="user-edit" general="manage-user-add" style="display: none">
           <i class="icon-remove" id="close-user-edit" general="close-user"></i>
@@ -96,15 +71,15 @@
       <a class="btn btn-primary" id="manage-user-delivery"><%= t 'manage.user.desc.assign_now' %></a>
     </section>
     <section class="solid">
-      <h3><%= t 'manage.user.desc.what-is-manager-title'%></h3>
+      <h3><%= t 'manage.user.desc.what-is-manager-title' %></h3>
 
-      <p><%= t 'manage.user.desc.what-is-manager'%></p>
+      <p><%= t 'manage.user.desc.what-is-manager' %></p>
 
     </section>
     <section class="solid">
-      <h3><%= t 'manage.user.desc.what-is-user-title'%></h3>
+      <h3><%= t 'manage.user.desc.what-is-user-title' %></h3>
 
-      <p><%= t 'manage.user.desc.what-is-user'%></p>
+      <p><%= t 'manage.user.desc.what-is-user' %></p>
 
     </section>
   </aside>
@@ -187,9 +162,9 @@
         MANAGE.user.init();
     })
 </script>
-<% content_for :javascript_includes do%>
-    <%= javascript_include_tag "Manage.js"%>
-    <%= javascript_include_tag "Manage-left-menu.js"%>
-    <%= javascript_include_tag "Manage-right-list.js"%>
-    <%= javascript_include_tag "Manage-user.js"%>
-<%end%>
+<% content_for :javascript_includes do %>
+    <%= javascript_include_tag "Manage.js" %>
+    <%= javascript_include_tag "Manage-left-menu.js" %>
+    <%= javascript_include_tag "Manage-right-list.js" %>
+    <%= javascript_include_tag "Manage-user.js" %>
+<% end %>
