--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
                 location.href='/404';
             },
             500:function(){
-                location.href='/500';
+               // location.href='/500';
             }
         }
     });
